<resources>
    <string name="app_name" translatable="false">HRecord</string>

    <string name="title">HRecord</string>
    <string name="User">User :</string>
    <string name="Pass">Password :</string>
    <string name="Sign_up">Sign up</string>
    <string name="Sign_in">Sign in</string>
    <string name="User_regis" translatable="false">User</string>
    <string name="Pass_regis" translatable="false">Password</string>

    <string name="title_signup">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="save">Save Data</string>

    <string name="title_record">Recording the daily behavior</string>
    <string name="sleep">Sleep</string>
    <string name="food">Food</string>
    <string name="exercise">Exercise</string>
    <string name="drink">Drinking Water (glass)</string>


    <string name="my_service" translatable="false">บริการ ของฉัน</string>
    <string name="morning">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="time">Exercise time</string>

    <string name="kilo">(kg)</string>
    <string name="hour">(hour)</string>
    <string name="weightrecord">Weight</string>

    <string name="run">Run</string>
    <string name="bicycle">Bicycle</string>
    <string name="swim">Swim</string>
    <string name="yoga">Yoga</string>
    <string name="other">Other</string>

    <string name="history">History</string>

    <string name="passwordfalse">Password False</string>
    <string name="passwordfalse2">Please Try Again Password False</string>
    <string name="havespace">Have Space</string>
    <string name="havespace2">Please Fill All Every Blank</string>

    <string name="userfalse">User False</string>
    <string name="none">None </string>
    <string name="indatabase"> in database</string>

    <string name="changeuser">Change User</string>
    <string name="user">User</string>
    <string name="database_already_exists.">database already exists.</string>

    <string name="drink2">DrinkWater</string>
    <string name="glass">glass</string>

    <string name="kilo2">kg</string>
    <string name="hour2">hour</string>
    <string name="weight2">Weight</string>

    <string name="password">Password</string>
    <string name="height2">Height</string>



</resources>
