<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="utcc.som.cken.tae.healthrecord.DetailActivity"
    android:background="@drawable/wall13">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/txtDetailDate"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/txtDetailSleep"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                android:layout_marginBottom="20dp" />

            <ImageView
                android:layout_width="@dimen/image"
                android:layout_height="@dimen/image"
                android:id="@+id/imvBreakfast"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/morning"
                android:id="@+id/textView21"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                android:layout_marginBottom="20dp" />

            <ImageView
                android:layout_width="@dimen/image"
                android:layout_height="@dimen/image"
                android:id="@+id/imvLunch"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunch"
                android:id="@+id/textView22"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                android:layout_marginBottom="20dp" />

            <ImageView
                android:layout_width="@dimen/image"
                android:layout_height="@dimen/image"
                android:id="@+id/imvDinner"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dinner"
                android:id="@+id/textView23"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/txtTypeExercise"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/txtTimeExercise"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/txtDrinkWater"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/txtWeight"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
